Add another file to root dir
Co-authored-by: Arjun Sreedharan <asreedharan@vmware.com>

--- a/.github/workflow/send-workingdir-update-to-impl-cnb.yml
+++ b/.github/workflow/send-workingdir-update-to-impl-cnb.yml
@@ -5,8 +5,8 @@ name: Send Working Dir Dispatch to Implementation CNB repos
 
 on:
   push:
-    paths:
-    - 'implementation/**'
+    # paths:
+    # - 'implementation/**'
 
 jobs:
 
