--- a/.github/workflows/send-workingdir-update-to-impl-cnb.yml
+++ b/.github/workflows/send-workingdir-update-to-impl-cnb.yml
@@ -7,8 +7,8 @@ on:
   push:
     branches:
       - master
-    # paths:
-    # - 'implementation/**'
+    paths:
+    - 'implementation/**'
 
 jobs:
 
