Fixes JSON object
Co-authored-by: Arjun Sreedharan <asreedharan@vmware.com>

--- a/.github/workflows/send-workingdir-update-to-impl-cnb.yml
+++ b/.github/workflows/send-workingdir-update-to-impl-cnb.yml
@@ -36,6 +36,6 @@ jobs:
           {
             "commit": "${{ env.CURR_HEAD }}",
             "pathmap": {
-              "/implementation": "/",
+              "/implementation": "/"
             }
           }
