--- a/.github/workflows/send-workingdir-update-to-impl-cnb.yml
+++ b/.github/workflows/send-workingdir-update-to-impl-cnb.yml
@@ -35,7 +35,6 @@ jobs:
         payload: |
           {
             "commit": "${{ env.CURR_HEAD }}",
-            "pathmap": {
-              "/implementation": "/"
-            }
+            "srcpath": "/implementation",
+            "dstpath": "/"
           }
